--- a/POC_GeoCoordinate.csproj
+++ b/POC_GeoCoordinate.csproj
@@ -8,7 +8,6 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\GeoCoordinateStuff\GeoCoordinateStuff.csproj" />
+    <PackageReference Include="System.Device.Location.Portable" Version="1.0.0" />
   </ItemGroup>
-
 </Project>
